# scnlib

./: .clang-format  .dockerignore  .git-blame-ignore-revs  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  Doxyfile  README.md  \  a.out  annotated.html  appveyor.yml  args_8h.html  classscn_1_1basic__istreambuf__view.html  classscn_1_1basic__regex__match.html  classscn_1_1basic__regex__matches.html  classscn_1_1basic__scan__arg.html  classscn_1_1basic__scan__arg_1_1handle.html  classscn_1_1basic__scan__args.html  classscn_1_1basic__scan__context.html  classscn_1_1basic__scan__format__string.html  classscn_1_1basic__scan__parse__context.html  classscn_1_1detail_1_1basic__range__streambuf.html  classscn_1_1detail_1_1compile__parse__context.html  classscn_1_1expected.html  classscn_1_1scan__error.html  classscn_1_1scan__result.html  classscn_1_1unexpected.html  classscn_1_1v3_1_1basic__regex__match.html  classscn_1_1v3_1_1basic__regex__matches.html  classscn_1_1v3_1_1basic__scan__arg.html  classscn_1_1v3_1_1basic__scan__arg_1_1handle.html  classscn_1_1v3_1_1basic__scan__args.html  classscn_1_1v3_1_1basic__scan__context.html  classscn_1_1v3_1_1basic__scan__format__string.html  (+51 more)
benchmark/: CMakeLists.txt  bench.cpp  bench_buffer.cpp  bench_char.cpp  bench_float.cpp  bench_int.cpp  bench_isspace.cpp  bench_list.cpp  bench_return.cpp  bench_word.cpp  benchmark.h
benchmark/binarysize/: CMakeLists.txt  binarysize_bench.py  process-binarysize-source.sh  run_binarysize_bench.py  template-iostream.cpp  template-scanf.cpp  template-scnlib.cpp
benchmark/bloat/: CMakeLists.txt  bloat-test.py  bloat-test.sh  bloat_test.py  control-template.cpp  control_template.cpp  iostream-template.cpp  iostream_template.cpp  process-bloat-source.sh  run-bloat-tests.py  scanf-template.cpp  scanf_string_template.cpp  scanf_template.cpp  scnlib-erased-template.cpp  scnlib-ranges-template.cpp  scnlib-template.cpp  scnlib-value-template.cpp  scnlib_ranges_template.cpp  scnlib_template.cpp
benchmark/buildtime/: CMakeLists.txt  cstdio.cpp  iostream.cpp  run-buildtime-benchmarks.sh  run-buildtime-tests.sh  scnlib.cpp
benchmark/include/: cstdio.cpp  iostream.cpp  scn-istream.cpp  scn-ranges.cpp  scn.cpp
benchmark/runtime/: CMakeLists.txt  benchmark.h
benchmark/runtime/basic/: CMakeLists.txt  basic_bench.cpp
cmake/: flags.cmake  (+16 more)
doc/: CMakeLists.txt  index.md  reference.md
docs/: CMakeLists.txt  Doxyfile.in  Pipfile  api.rst  cmake.rst  conf.py  guide.rst  index.rst  intro.rst  manual.rst  poxy.toml  requirements.txt
docs/api/: erased.rst  high.rst  index.rst  input_range.rst  low.rst  scanning.rst  types.rst
docs/migration/: migration_1_0.rst  migration_2_0.rst
docs/pages/: faq.md  guide.md  mainpage.md  migration-2-0.md
docs/rationale/: argref.rst  index.rst  views.rst  vscan.rst
docs/tutorial/: basics.rst  error.rst  format_string.rst  ignore.rst  index.rst  localization.rst  ranges.rst  scan_value.rst  scanf.rst  semantics.rst  strings.rst  temporaries.rst  tuple.rst  user_types.rst  wide_ranges.rst
examples/: CMakeLists.txt  example-1.cpp  example-2.cpp  example-3.cpp  example-file.cpp  example-get-value-ranges.cpp  example-get-value.cpp  example-getline.cpp  example-json.cpp  example-positional.cpp  example-ranges.cpp  example-readme.cpp  example-tuple-return.cpp  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp  example_5.cpp
include/scn/: CMakeLists.txt  all.h  args.h  chrono.h  config.h  core.h  fwd.h  istream.h  locale.h  macros.h  ranges.h  regex.h  scan.h  scn.h  stream.h  string_view.h  tuple_return.h  types.h  util.h  xchar.h
src/modules/: CMakeLists.txt  chrono.cppm  istream.cppm  ranges.cppm  regex.cppm  scan.cppm  scn.cppm
test/: CMakeLists.txt  boolean.cpp  buffer.cpp  char.cpp  empty.cpp  floating.cpp  format.cpp  fwd.cpp  integer.cpp  integer_each.cpp  istream.cpp  list.cpp  locale.cpp  locale_scan.cpp  pmr_string.cpp  range.cpp  ranges.cpp  reader.cpp  result.cpp  scan_localized.cpp  small_vector.cpp  std_string_view.cpp  stream.cpp  string.cpp  string_set.cpp  string_view.cpp  structured_bindings.cpp  test.cpp  test.h  tuple_return.cpp  until_space.cpp  usertype.cpp  utf16.cpp  utf8.cpp  util.cpp  wrap.cpp
test/consume/: main.cpp
test/each/: CMakeLists.txt  char_each.cpp  float_each.cpp  integer_each.cpp
test/file/: CMakeLists.txt  file.cpp  testfile.txt
test/fuzz/: CMakeLists.txt  dict-float.txt  dict-format.txt  dict-int.txt  dict-string.txt  dict-types.txt  dict.txt  fuzz.cpp  fuzz.h  fuzz_basic.cpp  fuzz_bool.cpp  fuzz_char.cpp  fuzz_deque.cpp  fuzz_float.cpp  fuzz_format.cpp  fuzz_getline.cpp  fuzz_indirect.cpp  fuzz_int.cpp  fuzz_roundtrip.cpp  fuzz_string.cpp  fuzz_types.cpp  run-fuzz.sh
test/localized/: CMakeLists.txt  bool.cpp  char.cpp  float.cpp  integer.cpp  locale.cpp  string.cpp  test.h
test/old/: char.cpp  integer.cpp  istream.cpp  small_vector.cpp  stream.cpp  string_view.cpp  test.cpp  tuple_return.cpp
test/ranges/: CMakeLists.txt  ranges.cpp
tests/fuzz/: CMakeLists.txt  chrono_fuzz.cpp  file_fuzz.cpp  float_fuzz.cpp  format_fuzz.cpp  fuzz.h  int_fuzz.cpp  roundtrip_fuzz.cpp  run-fuzz.sh  string_fuzz.cpp  string_impl_fuzz.cpp
tests/unittests/: CMakeLists.txt  align_and_fill_test.cpp  args_test.cpp  buffer_test.cpp  caching_view_test.cpp  char_test.cpp  chrono_test.cpp  context_test.cpp  custom_type_test.cpp  erased_range_test.cpp  error_test.cpp  examples_test_runner.py  examples_test_runner.sh  float_test.cpp  format_string_parser_test.cpp  format_string_test.cpp  input_map_test.cpp  integer_test.cpp  istream_range_test.cpp  istream_scanner_test.cpp  istream_source_test.cpp  main.cpp  memory_test.cpp  module_test.cpp  ranges_test.cpp  regex_test.cpp  result_test.cpp  scan_test.cpp  source_test.cpp  standalone_fwd_include_test.cpp  standalone_scan_include_test.cpp  stdin_parameterized_test.cpp  stdin_parameterized_test_runner.py  stdin_test.cpp  stdin_test_input.txt  stdin_test_runner.py  stdin_test_runner.sh  string_test.cpp  string_view_test.cpp  test_common.h  (+3 more)
(+1141 files in other folders)
