file(GLOB_RECURSE SCNLIB_MODULES *.cppm)

add_library(scnlib_modules)

cmake_minimum_required(VERSION 3.28)

if(NOT COMMAND configure_cpp_module_target)
  function(configure_cpp_module_target target)
    if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.28)
      target_sources(${target} PUBLIC FILE_SET CXX_MODULES FILES ${SCNLIB_MODULES})
    else()
      message(WARNING "C++ modules require CMake 3.28+. Using standard compilation.")
      target_sources(${target} PRIVATE ${SCNLIB_MODULES})
    endif()
  endfunction()
endif()

configure_cpp_module_target(scnlib_modules)

target_link_libraries(scnlib_modules
  PUBLIC
    scn::scn
)

target_include_directories(scnlib_modules
  PRIVATE
    ${PROJECT_SOURCE_DIR}/include
)

target_compile_features(scnlib_modules PUBLIC cxx_std_20)
